Adjusted main and about pages, added project page template

--- a/index.html
+++ b/index.html
@@ -49,15 +49,47 @@
       <div class="presentation">
         <h1>Hi there!</h1>
         <h1>I am Francisca Jara</h1>
-        <h2>a creative professional, currently learning about coding 👩🏻‍💻</h2>
+        <h2>
+          aspiring data scientist, former attorney and digital content creator,
+          I am passionate about the power of data has as a business and
+          innovation tool.
+        </h2>
         <br />
         <p class="learn-more"><a href="about.html">Learn more about me ✸</a></p>
       </div>
       <div class="portfolio">
-        <h2 id="projects">Take a look at my portfolio:</h2>
+        <h2 id="projects">Take a look at my Portfolio:</h2>
 
         <div class="container projects-wrap">
           <div class="row">
+            <div class="col-md-6">
+              <img src="media/weatherapp.jpg" class="img-fluid weatherapp" />
+            </div>
+            <div class="col-md-6 text">
+              <h2>
+                <a
+                  href="project-clustering.html"
+                  target="_blank"
+                  >Clustering for customer segmentation</a
+                >
+              </h2>
+              <p>
+                orem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                eiusmod tempor incididunt ut labore et dolore magna aliqua.
+              </p>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-md-6">
+              <img src="media/coming_soon.jpg" class="img-fluid brushes" />
+            </div>
+            <div class="col-md-6 text">
+              <h2>What will be a nice, affordable city to live in?</h2>
+              <p>coming soon!</p>
+            </div>
+          </div>
+        </div>
+         <div class="row">
             <div class="col-md-6">
               <img src="media/weatherapp.jpg" class="img-fluid weatherapp" />
             </div>
@@ -92,7 +124,9 @@
           <a href="about.html#email">contact me</a>
         </button>
       </div>
-      <p class="signature">Coded by Fran Jara 🪲</p>
+      <p class="signature">
+        Copyright © 2023 Coded by Fran Jara 🪲. All Rights Reserved.
+      </p>
     </div>
 
     <script
