--- a/project-clustering.html
+++ b/project-clustering.html
@@ -45,6 +45,7 @@
         </div>
       </div>
     </nav>
+
     <div class="main-wrap">
       <div class="presentation">
         <h1>About me</h1>
@@ -56,7 +57,7 @@
         <div class="col-md-6 text">
           <h2>
             <a href="https://www.linkedin.com/in/franciscajara/" target="_blank"
-              >My Background</a
+              >Title of the project</a
             >
           </h2>
           <p>
@@ -70,7 +71,7 @@
         </div>
       </div>
       <div class="presentation">
-        <h2>Skills & Techniques</h2>
+        <h2>Model, Techniques</h2>
       </div>
       <div class="bio-paragraph">
         <p>
@@ -81,7 +82,7 @@
         </p>
       </div>
       <div class="presentation">
-        <h2>Domain knowledge & Interests</h2>
+        <h2>ABSTRACT</h2>
       </div>
       <div class="bio-paragraph">
         <p>
@@ -92,7 +93,7 @@
         </p>
       </div>
       <div class="presentation">
-        <h2>Certifications</h2>
+        <h2>BACKGROUND AND QUESTIONS</h2>
       </div>
       <div class="bio-paragraph">
         <p>
@@ -102,31 +103,34 @@
           aliquip ex ea commodo consequat.
         </p>
       </div>
-      <div class="contact-info">
-        <h4 id="email">Contact me at franejara@gmail.com</h4>
+
+      <div class="container">
+        <div class="row">
+          <div class="col-md-6">
+            <img src="media/weatherapp.jpg" class="img-fluid weatherapp" />
+          </div>
+          <div class="col-md-6">
+            <img src="media/coming_soon.jpg" class="img-fluid brushes" />
+          </div>
+        </div>
+      </div>
+
+      <div class="container">
+        <div class="row">
+          <div class="col-md-6">
+            <img src="media/weatherapp.jpg" class="img-fluid weatherapp" />
+          </div>
+          <div class="col-md-6">
+            <img src="media/coming_soon.jpg" class="img-fluid brushes" />
+          </div>
+        </div>
       </div>
 
       <div class="container">
         <div class="row buttons">
           <div class="col-md-6">
             <button class="button">
-              <a
-                href="https://www.linkedin.com/in/franciscajara/"
-                target="_blank"
-                >My LinkedIn profile</a
-              >
-            </button>
-          </div>
-          <div class="col-md-6">
-            <button class="button">
               <a href="index.html#projects">Back to Portfolio</a>
-            </button>
-          </div>
-          <div class="col-md-6">
-            <button class="button">
-              <a href="https://github.com/franejara" target="_blank"
-                >Follow me on GitHub</a
-              >
             </button>
           </div>
         </div>
