Added content to clustering project page
Started to add the content, this is the first round.
I also did a few changes on home page, mainly a picture.

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         <div class="container projects-wrap">
           <div class="row">
             <div class="col-md-6">
-              <img src="media/weatherapp.jpg" class="img-fluid weatherapp" />
+              <img src="media/kmeans_4.jpg" class="img-fluid weatherapp" />
             </div>
             <div class="col-md-6 text">
               <h2>
