--- a/project-clustering.html
+++ b/project-clustering.html
@@ -48,48 +48,56 @@
 
     <div class="main-wrap">
       <div class="presentation">
-        <h1>About me</h1>
+        <h1>Improving customer segmentation with clustering techniques</h1>
       </div>
       <div class="row">
         <div class="col-md-6">
-          <img src="media/about_me.jpg" class="img-fluid weatherapp" />
+          <img src="media/kmeans_4.jpg" class="img-fluid weatherapp" />
         </div>
         <div class="col-md-6 text">
-          <h2>
-            <a href="https://www.linkedin.com/in/franciscajara/" target="_blank"
-              >Title of the project</a
-            >
-          </h2>
           <p>
-            orem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-            eiusmod tempor incididunt ut labore et dolore magna aliqua. orem
-            ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-            tempor incididunt ut labore et dolore magna aliqua. orem ipsum dolor
-            sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-            incididunt ut labore et dolore magna aliqua.
+            The email marketing team has had no success with their email
+            campaigns. They are planning next year's strategies and recognize
+            they are not clear about who their actual customers are, so I will
+            help them find out with some clustering techniques.
           </p>
         </div>
       </div>
       <div class="presentation">
-        <h2>Model, Techniques</h2>
+        <h3>Models, techniques and libraries used on this project:</h3>
       </div>
       <div class="bio-paragraph">
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-          eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
-          minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-          aliquip ex ea commodo consequat.
-        </p>
+        <ul>
+          <li>
+            EDA, including univariate and bivariate analyses, feature
+            engineering and data processing.
+          </li>
+          <li>
+            Preparing data for segmentation: separating behavioural customer
+            data from the columns that will be used for profiling (demographic
+            data).
+          </li>
+          <li>Scaling the data and applying PCA and T-SNE.</li>
+          <li>
+            Clustering models: K-Means, K-Medoids, Hierarchical clustering,
+            DBSCAN and Gaussian Mixture Model.
+          </li>
+          <li>
+            Python libraries used: NumPy, Pandas, Sklearn, Matplotlib, Seaborn.
+          </li>
+        </ul>
       </div>
       <div class="presentation">
-        <h2>ABSTRACT</h2>
+        <h3>ABSTRACT</h3>
       </div>
       <div class="bio-paragraph">
         <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-          eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
-          minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-          aliquip ex ea commodo consequat.
+          After four campaigns and almost no engagement, doing some customer
+          research is needed to better understand what are the segments in the
+          customers that the store already has, and how to reach new ones. With
+          these project, I found out they have four customer segments, clearly
+          differentiated by customers' behaviour regarding the type of product
+          they consume and amount spent.
         </p>
       </div>
       <div class="presentation">
@@ -97,10 +105,10 @@
       </div>
       <div class="bio-paragraph">
         <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-          eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
-          minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-          aliquip ex ea commodo consequat.
+          The aim of thi project is to help them find the best possible customer
+          segmentation. This project was my capstone project to complete the
+          Applied data science program I took at MIT Professional Education
+          during 2022.
         </p>
       </div>
 
