Improved content and design of project page
I also did some CSS changes to paragraph font, and to the index page content.

--- a/index.html
+++ b/index.html
@@ -47,12 +47,10 @@
     </nav>
     <div class="main-wrap">
       <div class="presentation">
-        <h1>Hi there!</h1>
+        <h1>Welcome!</h1>
         <h1>I am Francisca Jara</h1>
         <h2>
-          aspiring data scientist, former attorney and digital content creator,
-          I am passionate about the power of data has as a business and
-          innovation tool.
+          aspiring data scientist, former corporate lawyer, and digital content creator. <br /><br />I am passionate about the immense potential that understanding the data holds for any improvement and innovation.
         </h2>
         <br />
         <p class="learn-more"><a href="about.html">Learn more about me ✸</a></p>
@@ -70,12 +68,11 @@
                 <a
                   href="project-clustering.html"
                   target="_blank"
-                  >Clustering for customer segmentation</a
+                  >Segmenting Customers Using Clustering Techniques</a
                 >
               </h2>
               <p>
-                orem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-                eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                After four email campaigns and no conversion, the marketing team realizes that this is a crucial project to focus on.
               </p>
             </div>
           </div>
