Finished clustering project page, updated portfolio page

--- a/about.html
+++ b/about.html
@@ -119,7 +119,7 @@
           </div>
           <div class="col-md-6">
             <button class="button">
-              <a href="index.html#projects">Back to Portfolio</a>
+              <a href="portfolio.html">Back to Portfolio</a>
             </button>
           </div>
           <div class="col-md-6">
