--- a/project-clustering.html
+++ b/project-clustering.html
@@ -31,12 +31,12 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="index.html"
+              <a class="nav-link" aria-current="page" href="portfolio.html"
                 >Portfolio</a
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link active" href="#">About</a>
+              <a class="nav-link active" href="about.html">About</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="about.html#email">Contact me</a>
@@ -427,25 +427,15 @@
         </div>
       </div>
 
-      <div class="container">
-        <div class="row">
-          <div class="col-md-6">
-            <img src="media/weatherapp.jpg" class="img-fluid weatherapp" />
-          </div>
-          <div class="col-md-6">
-            <img src="media/coming_soon.jpg" class="img-fluid brushes" />
-          </div>
-        </div>
+      <div class="presentation">
+        <h4>Final comments</h4>
       </div>
-
-      <div class="container">
-        <div class="row">
-          <div class="col-md-6">
-            <img src="media/weatherapp.jpg" class="img-fluid weatherapp" />
-          </div>
-          <div class="col-md-6">
-            <img src="media/coming_soon.jpg" class="img-fluid brushes" />
-          </div>
+      <div class="row">
+        <div class="col-md-12">
+          <p>
+            This project was my capstone project to complete the Applied Data
+            Science program at MIT Professional Education in 2022.
+          </p>
         </div>
       </div>
 
@@ -453,7 +443,7 @@
         <div class="row buttons">
           <div class="col-md-6">
             <button class="button">
-              <a href="index.html#projects">Back to Portfolio</a>
+              <a href="portfolio.html">Back to Portfolio</a>
             </button>
           </div>
         </div>
