Added all remaining content. First edition finished.

--- a/about.html
+++ b/about.html
@@ -50,57 +50,93 @@
         <h1>About me</h1>
       </div>
       <div class="row">
-        <div class="col-md-6">
-          <img src="media/about_me.jpg" class="img-fluid weatherapp" />
+        <div class="col-md-4">
+          <img src="media/about_me.jpg" class="img-fluid profile" />
         </div>
-        <div class="col-md-6 text">
+        <div class="col-md-8 text">
           <h2>
             <a href="https://www.linkedin.com/in/franciscajara/" target="_blank"
               >My Background</a
             >
           </h2>
           <p>
-            orem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-            eiusmod tempor incididunt ut labore et dolore magna aliqua. orem
-            ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-            tempor incididunt ut labore et dolore magna aliqua. orem ipsum dolor
-            sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-            incididunt ut labore et dolore magna aliqua.
+            I'm embarking on a new journey in my professional life by pivoting
+            to a career in data science. My interest in programming languages
+            started in 2021, and the following year, I immersed myself in the
+            field of data science. I'm thrilled about the opportunity to utilize
+            data-driven techniques to enhance and innovate in various
+            industries. <br /><br />Previously, I spent four years as an
+            entrepreneur focused on content creation and digital marketing.
+            Prior to that, I worked for five years as a corporate lawyer for
+            Itaú bank in Chile, where I specialized in financial and banking
+            products and regulations. <br /><br />These unconventional
+            experiences have honed my ability to communicate effectively with
+            professionals from diverse backgrounds, complete projects
+            efficiently, deliver excellent customer service, and adapt quickly
+            to new challenges.
           </p>
         </div>
       </div>
       <div class="presentation">
-        <h2>Skills & Techniques</h2>
+        <h2>Skills</h2>
       </div>
       <div class="bio-paragraph">
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-          eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
-          minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-          aliquip ex ea commodo consequat.
-        </p>
+        <ul>
+          <li>
+            Exploratory data analysis, data visualization, feature engineering
+            and data processing, statistical analysis,
+          </li>
+          <li>
+            Python libraries: NumPy, Pandas, Matplotlib, Seaborn, Sklearn,
+            Statsmodels,
+          </li>
+          <li>
+            Proficient in Python, Jupyter Notebook, JavaScript, and Microsoft
+            Excel, SQL,
+          </li>
+          <li>
+            Machine learning techniques for unsupervised learning and modeling
+            time series,
+          </li>
+          <li>Experience with product analytics</li>
+          <li>Project management and coding best practices,</li>
+          <li>
+            Experience working with key stakeholders and c-level executives,
+          </li>
+          <li>
+            Strong analytical and problem-solving skills, effective
+            communicator,
+          </li>
+          <li>
+            A desire in growing my skills as a Data Scientist and being willing
+            to learn and teach as part of a team, and
+          </li>
+          <li>Bilingual - English and native Spanish speaker.</li>
+        </ul>
       </div>
       <div class="presentation">
-        <h2>Domain knowledge & Interests</h2>
+        <h2>Industry knowledge</h2>
       </div>
       <div class="bio-paragraph">
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-          eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
-          minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-          aliquip ex ea commodo consequat.
-        </p>
+        <ul>
+          <li>Banking and financial services and products,</li>
+          <li>Digital marketing, e-learning & e-commerce,</li>
+          <li>Retail & luxury jewelry,</li>
+          <li>Contracts and agreements, legal regulations,</li>
+          <li>Domestic pet import & export.</li>
+        </ul>
       </div>
       <div class="presentation">
         <h2>Certifications</h2>
       </div>
       <div class="bio-paragraph">
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-          eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
-          minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-          aliquip ex ea commodo consequat.
-        </p>
+        <ul>
+          <li>
+            Applied Data Science program, by MIT Professional Education, online,
+            2022
+          </li>
+          <li>Front-end development bootcamp, by shecodes.io, 2021</li>
+        </ul>
       </div>
       <div class="contact-info">
         <h4 id="email">Contact me at franejara@gmail.com</h4>
@@ -132,7 +168,7 @@
         </div>
       </div>
       <p class="signature">
-        Copyright © 2023 Coded by Fran Jara 🪲. All Rights Reserved.
+        Copyright © 2023 Coded by Francisca Jara 🪲. All Rights Reserved.
       </p>
     </div>
     <script
