--- a/portfolio.html
+++ b/portfolio.html
@@ -99,8 +99,8 @@
           </div>
           <div class="row">
             <div class="col-md-6">
-                 <h2>this one is in the making 👩🏽‍🎨</h2>
-              <p>coming soon!</p>
+                 <h2>4. This website</h2>
+              <p>Coded using HTML and CSS, I created this website as my portfolio to showcase my projects. You can read the code on <a href="https://github.com/franejara/DS-portfolio" target="_blank">my GitHub account</a>.</p>
               
             </div>
             <div class="col-md-6 text">
@@ -116,7 +116,7 @@
         </button>
       </div>
       <p class="signature">
-        Copyright © 2023 Coded by Fran Jara 🪲. All Rights Reserved.
+        Copyright © 2023 Coded by Francisca Jara 🪲. All Rights Reserved.
       </p>
     </div>
 
