--- a/project-clustering.html
+++ b/project-clustering.html
@@ -114,23 +114,23 @@
       <div class="bio-paragraph">
         <p>
           After experimenting with different clustering models and comparing
-          their results not only from a technical perspective but business-wise,
-          I chose the K-Means clustering model using K=4 as the optimal
-          solution. <br /><br />This approach provided four distinct customer
-          segments based on their purchasing behavior patterns and habits. The
-          chosen solution was superior to other alternatives as it provided
-          clear differentiation between customers in a relevant way to shape
-          marketing strategies - even when that meant not choosing the best
-          models technically.<br /><br />For example, there were a few models
-          that had better silhouette scores than the model that I chose as the
-          best solution, but at the moment of profiling their clusters, they
-          were not differentiated in ways that were useful from a marketing
-          standpoint. Some of them would put all the purchases of any product in
-          one cluster, and none on the others. Or they wouldn't differentiate
-          clearly regarding sales channels or the amount spent monthly in the
-          store.<br /><br />The solution I will present now gives the most
-          distinguishable and meaningful differences between clusters,
-          business-wise.
+          their results not only from a technical perspective but also
+          business-wise, I chose the K-Means clustering model using K=4 as the
+          optimal solution. <br /><br />This approach provided four distinct
+          customer segments based on their purchasing behavior patterns and
+          product preferences. The chosen solution was superior to other
+          alternatives as it provided clear differentiation between customers,
+          enabling effective targeting strategies - even when that meant not
+          choosing the best models technically.<br /><br />For example, there
+          were a few models that had better silhouette scores than the model
+          that I chose as the best solution, but at the moment of profiling
+          their clusters, they were not differentiated in ways that were useful
+          from a marketing standpoint. Some of them would put all the purchases
+          of any product in one cluster, and none on the others. Or they
+          wouldn't differentiate clearly regarding sales channels or the amount
+          spent monthly in the store.<br /><br />The solution I will present now
+          gives the most distinguishable and meaningful differences between
+          clusters.
         </p>
       </div>
       <div class="presentation">
@@ -449,7 +449,7 @@
         </div>
       </div>
       <p class="signature">
-        Copyright © 2023 Coded by Fran Jara 🪲. All Rights Reserved.
+        Copyright © 2023 Coded by Francisca Jara 🪲. All Rights Reserved.
       </p>
     </div>
     <script
