--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <h1>Welcome!</h1>
         <h1>I am Francisca Jara</h1>
         <h2>
-          aspiring data scientist, former corporate lawyer, and digital content creator. <br /><br />I am passionate about data and technology.
+          aspiring data scientist, former corporate lawyer, and digital content creator. I'm passionate about the opportunity to utilize data-driven techniques to enhance and innovate in various industries.
         </h2>
         <br />
         <p class="learn-more"><a href="about.html">Learn more about me ✸</a></p>
@@ -61,7 +61,7 @@
         <div class="container projects-wrap">
           <div class="row">
             <div class="col-md-6">
-              <img src="media/kmeans_4.jpg" class="img-fluid weatherapp" />
+            <img src="media/kmeans_4.jpg" class="img-fluid weatherapp" />
             </div>
             <div class="col-md-6 text">
               <h2>
@@ -108,8 +108,8 @@
               <img src="media/coming_soon.jpg" class="img-fluid brushes" />
             </div>
             <div class="col-md-6 text">
-              <h2>this one is in the making 👩🏽‍🎨</h2>
-              <p>coming soon!</p>
+              <h2>This website</h2>
+              <p>Coded using HTML and CSS, I created this website as my portfolio to showcase my projects. You can read the code on <a href="https://github.com/franejara/DS-portfolio" target="_blank">my GitHub account</a>.</p>
             </div>
           </div>
         </div>
@@ -121,7 +121,7 @@
         </button>
       </div>
       <p class="signature">
-        Copyright © 2023 Coded by Fran Jara 🪲. All Rights Reserved.
+        Copyright © 2023 Coded by Francisca Jara 🪲. All Rights Reserved.
       </p>
     </div>
 
