Finished project clustering and forecasting project pages.

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <h1>Welcome!</h1>
         <h1>I am Francisca Jara</h1>
         <h2>
-          aspiring data scientist, former corporate lawyer, and digital content creator. I'm passionate about the opportunity to utilize data-driven techniques to enhance and innovate in various industries.
+          aspiring data scientist, former corporate lawyer, and digital content creator. I'm passionate about the opportunity to utilize machine learning techniques to enhance and innovate in various industries.
         </h2>
         <br />
         <p class="learn-more"><a href="about.html">Learn more about me ✸</a></p>
@@ -66,10 +66,7 @@
             <div class="col-md-6 text">
               <h2>
                 <a
-                  href="project-clustering.html"
-                  target="_blank"
-                  >Segmenting Customers Using Clustering Techniques</a
-                >
+                  href="project-clustering.html">Segmenting Customers Using Clustering Techniques</a>
               </h2>
               <p>
                 After four email campaigns and no conversion, the marketing team is ready to focus on this crucial project.
@@ -78,14 +75,15 @@
           </div>
           <div class="row">
             <div class="col-md-6">
-              <img src="media/coming_soon.jpg" class="img-fluid brushes" />
+              <img src="media/forecasting_rent.jpg" class="img-fluid brushes" />
             </div>
             <div class="col-md-6 text">
-              <h2>What will be a nice, affordable city to live in?</h2>
-              <p>coming soon!</p>
+              <h2> <a
+                  href="project-forecasting.html">Forecasting Rent Growth in America's Most Walkable Cities: A Time Series Modeling approach</a></h2>
+              <p>What would be a nice, affordable city to live in in the near future? This is the data science project I am currently working on.</p>
             </div>
           </div>
-        </div>
+        
          <div class="row">
             <div class="col-md-6">
               <img src="media/weatherapp.jpg" class="img-fluid weatherapp" />
@@ -114,7 +112,7 @@
           </div>
         </div>
       </div>
-
+</div>
       <div class="buttons">
         <button class="button">
           <a href="about.html#email">contact me</a>
