--- a/portfolio.html
+++ b/portfolio.html
@@ -70,15 +70,14 @@
           </div>
           <div class="row">
             <div class="col-md-6">
-                <h2>2. What will be a nice, affordable city to live in?</h2>
-              <p>coming soon!</p>
-              
+                <h2> <a href="project-forecasting.html">2. Forecasting Rent Growth in America's Most Walkable Cities: A Time Series Modeling approach</a></h2>
+              <p>What would be a nice, affordable city to live in in the near future? This is the data science project I am currently working on.</p>
             </div>
             <div class="col-md-6 text">
-              <img src="media/coming_soon.jpg" class="img-fluid brushes" />
+              <img src="media/forecasting_rent.jpg" class="img-fluid brushes" />
             </div>
           </div>
-        </div>
+        
          <div class="row">
             <div class="col-md-6">
                  <h2>
@@ -109,7 +108,7 @@
           </div>
         </div>
       </div>
-
+</div>
       <div class="buttons">
         <button class="button">
           <a href="about.html#email">contact me</a>
