--- a/project-clustering.html
+++ b/project-clustering.html
@@ -434,7 +434,11 @@
         <div class="col-md-12">
           <p>
             This project was my capstone project to complete the Applied Data
-            Science program at MIT Professional Education in 2022.
+            Science program at MIT Professional Education in 2022. You can find
+            the complete HTML file of the jupyter notebook of this project
+            <a href="https://github.com/franejara/clustering" target="_blank"
+              >here in my GitHub.</a
+            >
           </p>
         </div>
       </div>
