Updated welcome content

--- a/about.html
+++ b/about.html
@@ -64,7 +64,7 @@
             to a career in data science. My interest in programming languages
             started in 2021, and the following year, I immersed myself in the
             field of data science. I'm thrilled about the opportunity to utilize
-            machine learning techniques to enhance and innovate in various
+            machine learning techniques to grow, improve and innovate in various
             industries. <br /><br />Previously, I spent four years as an
             entrepreneur focused on content creation and digital marketing.
             Prior to that, I worked for five years as a corporate lawyer for
