--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <h1>Welcome!</h1>
         <h1>I am Francisca Jara</h1>
         <h2>
-          aspiring data scientist, former corporate lawyer, and digital content creator. I'm passionate about the opportunity to utilize machine learning techniques to enhance and innovate in various industries.
+          aspiring data scientist, former corporate lawyer, and digital content creator. I am passionate about machine learning, and using data and technology together to drive business innovation.
         </h2>
         <br />
         <p class="learn-more"><a href="about.html">Learn more about me ✸</a></p>
